--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "mailgun.js": "^9.2.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8"
   }
 }
